Ajout gestion des gestionnaires, refonte UI et fonctionnalites de reinitialisation
- Ajout du module gestionnaires (auth-service): CRUD, DTOs, controller et service
- Ajout des reponses de reinitialisation (candidat et repartition services)
- Ajout du renommage de centre (concours-service)
- Refonte frontend: page Gestionnaires, header, branding et pages mises a jour

Co-authored-by: Cursor <cursoragent@cursor.com>